# based-engine

./: CMakeLists.txt  README.md  imgui.ini
models/cubemap/: cubemap.mtl
models/dev_orange_cube/: dev_orange_cube.mtl
models/dev_purple_cube/: dev_purple_cube.mtl
models/dev_white_cube/: dev_white_cube.mtl
models/floor/: floor.mtl
models/grass/: grass.mtl
models/hamster/: hamster.mtl
models/ignored/: ignored_files.txt
models/plane/: plane.mtl
physx/libs/: LowLevelAABB_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXTask_static_64.lib  PhysXVehicle2_static_64.lib  PhysX_64.exp  PhysX_64.lib  SceneQuery_static_64.lib
shaders/: camera_matrix.hlsl  directional_light.hlsl  light.frag  light.vert  model.frag  model.ps.hlsl  model.vert  model.vs.hlsl  model_matrix.hlsl  outline.frag  picking.frag  picking.vert  shadow.ps.hlsl  shadow.vs.hlsl  shadow_map.frag  shadow_map.hlsl  shadow_map.vert  skybox.frag  skybox.ps.hlsl  skybox.vert  skybox.vs.hlsl  transform_matrix.hlsl  util.hlsl
src/: application.cpp  application.hpp  dx11_context.cpp  dx11_context.hpp  game.cpp  game.hpp  glfw_input.cpp  glfw_input.hpp  log.hpp  main.cpp  scene.cpp  scene.hpp  window.cpp  window.hpp
src/camera/: camera.cpp  camera.hpp
src/common/: file_util.cpp  file_util.hpp  glfw_util.cpp  glfw_util.hpp  math.cpp
src/component/: directional_light_component.cpp  directional_light_component.hpp  info_component.cpp  info_component.hpp  light_component.cpp  light_component.hpp  model_component.hpp  point_light_component.cpp  point_light_component.hpp  spot_light_component.cpp  spot_light_component.hpp  transform_component.cpp  transform_component.hpp
src/components/: component.cpp  component.hpp  directional_light_component.cpp  directional_light_component.hpp  ignore_component.cpp  ignore_component.hpp  info_component.cpp  info_component.hpp  rigidbody_component.cpp  (+5 more)
(+80 files in other folders)
